fixed devise overlap

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,6 @@
 .alert {
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
-  z-index: 1000;
+  position: relative;
+  // bottom: 10px;
+  // right: 16px;
+  // z-index: 1000;
 }
